<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Stadium</string>
    <string name="empty_string"></string>
    <string name="phone_number_hint">05xxxxxxxx</string>
    <string name="ok">موافق</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="unplug_mobile_cable_from_computer">من فضلك، قم بفصل كابل الموبايل من الكمبيوتر</string>
    <string name="something_went_wrong_please_try_again">حدث خطأٌ ما، برجاء المحاولة مرة أخرى</string>
    <string name="no_internet_connection">لا يوجد اتصال بالانترنت</string>
    <string name="please_wait_dotted">برجاء الانتظار...</string>
    <string name="search">بحث</string>
    <string name="you_need_to_grant_required_permissions">يجب اعطاء الصلاحيات المطلوبة</string>
    <string name="no_camera_app_found_in_this_device">لا يوجد أي تطبيق للكاميرا على هذا الجهاز</string>
    <string name="error_fetching_this_image">حدث خطأ اثناء جلب هذه الصورة</string>
    <string name="crop__saving">جارى حفظ الصورة...</string>
    <string name="crop__wait">رجاء الأنتظار...</string>
    <string name="crop__pick_error">الصورة غير متاحة</string>
    <string name="crop__done">تم</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">الغاء</string>
    <string name="from_gallery">اختيار من معرض الصور</string>
    <string name="from_camera">التقاط من الكاميرا</string>
    <string name="remove_image">حذف الصورة</string>
    <string name="no_email_app_found_in_this_device">لا يوجد أي تطبيق للبريد الالكتروني على هذا الجهاز</string>
    <string name="login1">تسجيل الدخول</string>
    <string name="login2">الدخول</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="forget_it_q">نسيتها؟</string>
    <string name="login_with_facebook">الدخول بواسطة الفيسبوك</string>
    <string name="dont_have_account_signup_now">ليس لديك حساب؟ <b>سجل الآن</b></string>
    <string name="verify">التحقق</string>
    <string name="forget_password_q">نسيت كلمة المرور؟</string>
    <string name="please_enter_your_mobile_no">من فضلك ادخل رقم الجوال الخاص بك</string>
    <string name="mobile_no_here_dotted">رقم الجوال هنا...</string>
    <string name="close">اغلاق</string>
    <string name="forget_password_using_email_success_msg">تمت العملية بنجاح\nوسوف تصلك كلمة المرور الجديدة على بريدك الالكتروني</string>
    <string name="forget_password_using_phone_success_msg">تمت العملية بنجاح\nوسوف تصلك كلمة المرور الجديدة في رسالة على الجوال</string>
    <string name="restore_password_method">طريقة استعادة كلمة المرور</string>
    <string name="by_mail">عن طريق البريد الالكتروني</string>
    <string name="by_mobile">عن طريق الجوال</string>
    <string name="select">اختيار</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="about_app">عن التطبيق</string>
    <string name="settings">الاعدادات</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="home">الرئيسية</string>
    <string name="stadiums">ملاعب</string>
    <string name="reservations">الحجوزات</string>
    <string name="players">لاعبين</string>
    <string name="my_teams">افرقتي</string>
    <string name="main_info">المعلومات الاساسية</string>
    <string name="name">الاسم</string>
    <string name="age">السن</string>
    <string name="the_city">المدينة</string>
    <string name="city">مدينة</string>
    <string name="account_info">معلومات الحساب</string>
    <string name="sign_up">التسجيل</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="have_account_login">لديك حساب بالفعل؟ <b>الدخول</b></string>
    <string name="edit_profile">تعديل الملف الشخصي</string>
    <string name="contacts">جهات الاتصال</string>
    <string name="create">انشاء</string>
    <string name="team_name">اسم الفريق</string>
    <string name="team_details">نبذة عن الفريق</string>
    <string name="can_create_new_team">يمكنك انشاء فريق جديد</string>
    <string name="favorite_stadium_u"><u>الملعب المفضل</u></string>
    <string name="cancel">الغاء</string>
    <string name="choose">اختيار</string>
    <string name="add_team">اضافة فريق</string>
    <string name="update">تعديل</string>
    <string name="team">فريق</string>
    <string name="the_team">الفريق</string>
    <string name="update_team">تعديل بيانات الفريق</string>
    <string name="details">نبذه عن الفريق</string>
    <string name="can_create_new_team_start_now">يمكنك انشاء فريق جديد. ابدأ الآن</string>
    <string name="confirm">تأكيد</string>
    <string name="refuse">رفض</string>
    <string name="stadium_rating">تقييم الملعب</string>
    <string name="location">الموقع</string>
    <string name="order">ترتيب</string>
    <string name="order_by">ترتيب بواسطة</string>
    <string name="add">اضافة</string>
    <string name="can_add_reservation_reserve_q">يمكنك اضافة حجز جديد. حجز الآن؟</string>
    <string name="cancel_reservation">الغاء الحجز</string>
    <string name="save">حفظ</string>
    <string name="confirm_attendance">تأكيد الحضور</string>
    <string name="cancel_u"><u>الغاء</u></string>
    <string name="confirm_your_attendance_u"><u>تأكيد حضورك</u></string>
    <string name="confirmed">تم التأكيد</string>
    <string name="my_contacts">جهات اتصالي</string>
    <string name="arrange_players">الترتيب بواسطة تقييم اللاعب</string>
    <string name="can_add">يمكنك اضافة</string>
    <string name="to_your_team">الي فريقك</string>
    <string name="player_teams">افرقة اللاعب</string>
    <string name="player_rating">تقييم اللاعب</string>
    <string name="his_city">مدينته</string>
    <string name="can_add_this_player_to_team">يمكنك اضافة هذا اللاعب لفريقك</string>
    <string name="add_player_to">اضافة اللاعب الى</string>
    <string name="favorite_stadium">الملعب المفضل</string>
    <string name="team_info">بيانات الفريق</string>
    <string name="choose_team">اختار الفريق</string>
    <string name="exit">خروج</string>
    <string name="stade">الاستاد</string>
    <string name="blocked">المحظور</string>
    <string name="repeated_reservation">حجز متكرر</string>
    <string name="today_reservation">حجوزات اليوم</string>
    <string name="accepted_reservation">حجوزات مقبولة</string>
    <string name="new_reservation">حجوزات جديدة</string>
    <string name="appointment">الموعد</string>
    <string name="player_info">بيانات اللاعب</string>
    <string name="didnt_attend">لم يحضر</string>
    <string name="block_team">حظر الفريق</string>
    <string name="both">كلاهما</string>
    <string name="name_reserve">حجز بااسم</string>
    <string name="reserve">حجز</string>
    <string name="cancel_block">الغاء الحظر</string>
    <string name="required">حقل مطلوب</string>
    <string name="logout_q">تسجيل الخروج؟</string>
    <string name="error_doing_operation">خطأ اثناء تنفيذ العملية</string>
    <string name="failed_loading_cities">فشل تحميل المدن</string>
    <string name="select_city">اختر المدينة</string>
    <string name="invalid_value">قيمة غير صحيحة</string>
    <string name="please_select_city">من فضلك اختر المدينة</string>
    <string name="passwords_dont_match">كلمتي المرور غير متطابقتين</string>
    <string name="no_content_here">لا يوجد محتوى</string>
    <string name="failed_loading_data">فشل تحميل البيانات</string>
    <string name="tap_to_refresh">اضغط للتحديث</string>
    <string name="no_stadiums_found">لا يوجد ملاعب </string>
    <string name="failed_loading_stadiums">فشل تحميل الملاعب</string>
    <string name="has_d_stadiums">يحتوي على %1$d ملعب</string>
    <string name="address_c">العنوان:</string>
    <string name="no_events_yet">لا يوجد احداث حتى الآن</string>
    <string name="failed_loading_events">فشل تحميل الاحداث</string>
    <string name="position">المركز</string>
    <string name="email_address">البريد الالكتروني</string>
    <string name="bio">النبذة</string>
    <string name="additional_info">معلومات اضافية</string>
    <string name="invalid_email_format">صيغة البريد الالكتروني غير صحيحة</string>
    <string name="profile_updated_successfully">تم تحديث الملف الشخصي بنجاح</string>
    <string name="team_created_successfully">تم انشاء الفريق بنجاح</string>
    <string name="choose_favorite_stadium">يجب اختيار ملعب مفضل</string>
    <string name="image_updated_successfully">تم تغيير الصورة بنجاح</string>
    <string name="failed_updating_image">فشل تغيير الصورة</string>
    <string name="accepted_successfully">تم الموافقة بنجاح</string>
    <string name="error_accepting">حدث خطأ اثناء الموافقة</string>
    <string name="declined_successfully">تم الرفض بنجاح</string>
    <string name="error_declining">حدث خطأ اثناء الرفض</string>
    <string name="confirm_this_reservation_q">تأكيد هذا الحجز؟</string>
    <string name="decline_this_reservation_q">رفض هذا الحجز؟</string>
    <string name="decline">إعتذار</string>
    <string name="failed_loading_info">فشل تحميل البيانات</string>
    <string name="please_refresh">برجاء التحديث</string>
    <string name="rated_successfully">تم التقييم بنجاح</string>
    <string name="failed_rating">فشل التقييم</string>
    <string name="the_stadiums">الملاعب</string>
    <string name="teams">الأفرقة</string>
    <string name="no_teams_found">لا يوجد أفرقة</string>
    <string name="failed_loading_teams">فشل تحميل الأفرقة</string>
    <string name="added_successfully">تمت الاضافة بنجاح</string>
    <string name="failed_adding_player">فشل اضافة اللاعب</string>
    <string name="failed_loading_player_teams">فشل تحميل أفرقة اللاعب</string>
    <string name="no_teams_for_this_player">لا يوجد أفرقة لهذا اللاعب</string>
    <string name="rate_this_player_with_x_starts_q">تقييم هذا اللاعب بـ %s نجوم؟</string>
    <string name="edit_team_info">تعديل بيانات الفريق</string>
    <string name="dot_x_player">. %d لاعب</string>
    <string name="you_are_out_by_the_captain">تم استبعادك عن طريق الكابتن</string>
    <string name="no_players_in_this_team">لا يوجد لاعبين في هذا الفريق</string>
    <string name="failed_loading_team_players">فشل تحميل لاعبي الفريق</string>
    <string name="make_captain">تعيين كابتن</string>
    <string name="delete_captain">الغاء تعيين كابتن</string>
    <string name="make_assistant">تعيين مساعد كابتن</string>
    <string name="delete_assistant">الغاء تعيين مساعد كابتن</string>
    <string name="delete_from_team">حذف من الفريق</string>
    <string name="remove_from_team_q">حذف من الفريق؟</string>
    <string name="removed_successfully">تم الحذف بنجاح</string>
    <string name="failed_removing">فشل الحذف</string>
    <string name="make_assistant_q">تعيين مساعد كابتن؟</string>
    <string name="made_successfully">تم التعيين بنجاح</string>
    <string name="failed_making_player">فشل تعيين اللاعب</string>
    <string name="delete_assistant_q">الغاء تعيين مساعد كابتن؟</string>
    <string name="player_name">اسم اللاعب</string>
    <string name="stadium_name">اسم الملعب</string>
    <string name="field_capacity">سعة الملعب</string>
    <string name="date">التاريخ</string>
    <string name="time">التوقيت</string>
    <string name="to">الى</string>
    <string name="date_c">التاريخ:</string>
    <string name="field_number">رقم الملعب</string>
    <string name="price">السعر</string>
    <string name="from">من</string>
    <string name="day">اليوم</string>
    <string name="birthdate">تاريخ الميلاد</string>
    <string name="current_password">كلمة المرور الحالية</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="confirm_new_password">تأكيد كلمة المرور الجديدة</string>
    <string name="change">تغيير</string>
    <string name="challenge_type">نوع التحدي</string>
    <string name="place">المكان</string>
    <string name="add_your_challenge_with_reservation_or_later_reservation">اضف تحديك بحجز سابق او احجز بعد الاتفاق مع المتحدي</string>
    <string name="who_you_are_challenging">من تتحدى</string>
    <string name="challenge_message">رسالة التحدي</string>
    <string name="reservation">الحجز</string>
    <string name="challenger_team">الفريق المتحدي</string>
</resources>