<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/btn_team_name"
            style="@style/GrayETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_name" />

        <Button
            android:id="@+id/btn_field_no"
            style="@style/GrayETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/field_number" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/price"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_date_to"
                style="@style/GrayETButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/clickable_gray_calendar_icon"
                android:text="@string/to" />

            <Button
                android:id="@+id/btn_date_from"
                style="@style/GrayETButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/clickable_gray_calendar_icon"
                android:text="@string/from" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/date_c"
                android:textSize="@dimen/medium_text" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_duration"
            style="@style/GrayETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time" />

        <Button
            android:id="@+id/btn_day"
            style="@style/GrayETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/day" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <com.stadium.app.views.DarkenedButton
            android:id="@+id/btn_cancel"
            style="@style/GreenButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.stadium.app.views.DarkenedButton
            android:id="@+id/btn_add"
            style="@style/StrokedGreenButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>