<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/btn_type"
            style="@style/WhiteETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_type" />

        <Button
            android:id="@+id/btn_team"
            style="@style/WhiteETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/the_team" />

        <Button
            android:id="@+id/btn_place"
            style="@style/WhiteETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/place" />

        <Button
            android:id="@+id/btn_day"
            style="@style/WhiteETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/day" />

        <Button
            android:id="@+id/btn_time"
            style="@style/WhiteETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time" />

        <com.stormnology.stadium.views.DarkenedButton
            android:id="@+id/btn_search"
            style="@style/WhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/search" />
    </LinearLayout>
</LinearLayout>