<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="ifContentScrolls">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:padding="12dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_image"
                style="@style/CroppedImageView"
                android:layout_width="@dimen/edit_profile_user_image_size"
                android:layout_height="@dimen/edit_profile_user_image_size"
                android:layout_gravity="center"
                android:src="@drawable/def_user_form_image"
                app:riv_oval="true" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/OrangeSectionHeadTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/main_info" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:editable="false"
                android:hint="@string/name"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_birthdate"
                style="@style/GrayETButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/clickable_gray_calendar_icon"
                android:text="@string/birthdate" />

            <Spinner
                android:id="@+id/sp_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />

            <TextView
                style="@style/OrangeSectionHeadTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:text="@string/account_info" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:selectAllOnFocus="true" />

            <TextView
                style="@style/OrangeSectionHeadTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:text="@string/additional_info" />

            <Button
                android:id="@+id/btn_position"
                style="@style/GrayETButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/position" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/et_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio"
                android:selectAllOnFocus="true" />

            <com.stormnology.stadium.views.DarkenedButton
                android:id="@+id/btn_update"
                style="@style/GreenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/update" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
