<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/btn_city"
            style="@style/WhiteETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_city" />

        <EditText
            android:id="@+id/et_name"
            style="@style/WhiteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/stadium_name"
            android:scrollHorizontally="true"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_field_capacity"
            style="@style/WhiteETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/field_capacity" />

        <Button
            android:id="@+id/btn_date"
            style="@style/WhiteETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/white_calendar_icon"
            android:text="@string/date" />

        <Button
            android:id="@+id/btn_time"
            style="@style/WhiteETButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time" />

        <com.stormnology.stadium.views.DarkenedButton
            android:id="@+id/btn_search"
            style="@style/WhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/search" />
    </LinearLayout>
</LinearLayout>