<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:minHeight="@dimen/min_dialog_height"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_dialog_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp">

        <EditText
            android:id="@+id/et_current_password"
            style="@style/OrangeStrokedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/et_new_password"
            style="@style/OrangeStrokedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="@integer/user_password_max_chars"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/et_re_new_password"
            style="@style/OrangeStrokedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:maxLength="@integer/user_password_max_chars"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <com.stormnology.stadium.views.DarkenedButton
        android:id="@+id/btn_submit"
        style="@style/DialogOrangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/change" />
</LinearLayout>