<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/btn_city"
                style="@style/ETButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <EditText
                android:id="@+id/et_name"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/white"
                android:hint="@string/player_name"
                android:selectAllOnFocus="true" />

            <Button
                android:id="@+id/btn_position"
                style="@style/ETButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/position" />

            <com.stadium.app.views.DarkenedButton
                android:id="@+id/btn_search"
                style="@style/WhiteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/search" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_empty_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent" />
</LinearLayout>